--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,6 @@ export(get_nacc)
 export(get_table)
 export(map_var)
 export(mymatch)
-import(Rcpp)
-import(methods)
-import(stats)
 importFrom(dplyr,filter)
 importFrom(grDevices,colors)
 importFrom(graphics,arrows)
@@ -23,5 +20,17 @@ importFrom(graphics,rect)
 importFrom(graphics,text)
 importFrom(parallel,detectCores)
 importFrom(readxl,read_xlsx)
+importFrom(stats,approxfun)
+importFrom(stats,as.formula)
+importFrom(stats,binomial)
+importFrom(stats,cov)
+importFrom(stats,density)
+importFrom(stats,ecdf)
+importFrom(stats,glm)
+importFrom(stats,integrate)
+importFrom(stats,optim)
+importFrom(stats,predict)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(stats,var)
 importFrom(utils,as.roman)
-useDynLib(ADTool, .registration = TRUE)
