update dict and query functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(a_window)
 export(adt_get_biocard)
 export(adt_get_dict)
 export(adt_get_nacc)
+export(adt_query)
 export(adt_tk_query)
 import(dplyr)
 importFrom(gdata,read.xls)
