col_name update method edit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(adt_get_nacc)
 export(adt_query)
 export(adt_tk_query)
 import(dplyr)
+import(tidyr)
+import(xlsx)
 importFrom(gdata,read.xls)
 importFrom(grDevices,colors)
 importFrom(graphics,arrows)
